--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -1,6 +1,7 @@
 .time { 
     text-align: center;
     padding: 32px;
+    position: relative;
  
 }
 
@@ -15,4 +16,10 @@
     justify-content: space-around;
     gap: 2rem;
     flex-wrap: wrap;
+}
+
+.input-cor {
+    position: absolute;
+    top: 1.25rem;
+    right: 3.125rem;
 }
